@@ -117,7 +117,7 @@ void md5_64 (const u32 block[16], u32 digest[4])
 
 // only use this when really, really needed, SLOW
 
-void md5_complete_no_limit (u32 digest[4], u32 *plain, u32 plain_len)
+void md5_complete_no_limit (u32 digest[4], const u32 *plain, const u32 plain_len)
 {
   u32 a = MD5M_A;
   u32 b = MD5M_B;
