@@ -6,6 +6,12 @@
 
 - Try to evaluate available OpenCL device memory and use this information instead of total available OpenCL device memory for autotune
 
+##
+## Bugs
+##
+
+- Fixed a buffer overflow in precompute_salt_md5() in case salt was longer than 64 characters
+
 * changes v4.1.0 -> v4.2.0
 
 ##
